@@ -13,6 +13,7 @@ v2.1.7
 ! fixed imdb::comment_split() broken due to site changes
 ! fixed company credits (all four methods have been broken due to site changes)
 * removed some garbage preceding the storyline returned by imdb::storyline()
++ imdbsearch::results() got additional parameters so results can be better filtered
 
 v2.1.6 (06.02.2012)
 -------------------
